packages/ui/src/EmptyState.module.scss
@use '../styles/constants' as c;

.container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  max-width: c.$emptyStateMaxWidth;
  text-align: center;

  .content {
    .title {
      margin: c.$grid * 4.5 0 0 0;
      @include c.typographyBodyNormal('bold' !important);
    }

    .description {
      color: c.$colorTextSecondary;
      margin: c.$grid 0 0 0;

      @include c.typographyBodySmall;
    }

    .action {
      flex: 1;
      min-width: c.$emptyStateButtonMinWidthNormal;
      margin-top: c.$grid * 5;
    }
  }

  // Size
  &.large {
    .content {
      .title {
        margin-top: c.$grid * 5.5;
      }

      .description {
        margin-top: c.$grid * 2;

        @include c.typographyBodyNormal;
      }

      .action {
        min-width: c.$emptyStateButtonMinWidthLarge;
        margin-top: c.$grid * 6;
      }
    }
  }

  // Direction
  &.horizontal {
    flex: 1;
    flex-direction: row;
    text-align: start;

    .icon {
      flex: 0 0 auto;
      align-self: flex-start;
    }

    .content {
      display: flex;
      flex-direction: column;
      justify-content: flex-start;
      margin-left: c.$grid * 2;

      .title {
        margin: 0;

        @include c.typographyBodyNormal('bold' !important);
      }

      .description {
        margin-top: c.$grid;

        @include c.typographyBodySmall;
      }

      .action {
        align-self: flex-start;
        min-width: auto;
        margin: c.$grid 0 0 0;
      }
    }
  }
}

